--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@
 ;MKS_TFT32_V1_3
 ;MKS_TFT32_V1_4
 ;MKS_TFT32_V1_4_NOBL
+;MKS_TFT32L_V3_0
 ;MKS_TFT35_V1_0
 
 [platformio]
@@ -47,7 +48,7 @@ boards_dir   = buildroot/boards
 default_envs = MKS_TFT28_V1_0_ARTILLERY
 
 ;Build all Targets
-;default_envs = BIGTREE_TFT24_V1_1, BIGTREE_TFT28_V1_0, BIGTREE_TFT28_V3_0, BIGTREE_TFT35_V1_0, BIGTREE_TFT35_V1_1, BIGTREE_TFT35_V1_2, BIGTREE_TFT35_V2_0, BIGTREE_TFT35_V3_0, BIGTREE_TFT35_E3_V3_0, BIGTREE_TFT35_B1_V3_0, BIGTREE_TFT43_V3_0, BIGTREE_TFT50_V3_0, BIGTREE_TFT70_V3_0, BIGTREE_GD_TFT24_V1_1, BIGTREE_GD_TFT35_V2_0, BIGTREE_GD_TFT35_V3_0, BIGTREE_GD_TFT35_E3_V3_0, BIGTREE_GD_TFT35_B1_V3_0, BIGTREE_GD_TFT43_V3_0, BIGTREE_GD_TFT50_V3_0, BIGTREE_GD_TFT70_V3_0, MKS_TFT28_V3_0, MKS_TFT28_V4_0, MKS_TFT28_NEW_GENIUS, MKS_TFT32_V1_3, MKS_TFT32_V1_4, MKS_TFT32_V1_4_NOBL, MKS_TFT35_V1_0
+;default_envs = BIGTREE_TFT24_V1_1, BIGTREE_TFT28_V1_0, BIGTREE_TFT28_V3_0, BIGTREE_TFT35_V1_0, BIGTREE_TFT35_V1_1, BIGTREE_TFT35_V1_2, BIGTREE_TFT35_V2_0, BIGTREE_TFT35_V3_0, BIGTREE_TFT35_E3_V3_0, BIGTREE_TFT35_B1_V3_0, BIGTREE_TFT43_V3_0, BIGTREE_TFT50_V3_0, BIGTREE_TFT70_V3_0, BIGTREE_GD_TFT24_V1_1, BIGTREE_GD_TFT35_V2_0, BIGTREE_GD_TFT35_V3_0, BIGTREE_GD_TFT35_E3_V3_0, BIGTREE_GD_TFT35_B1_V3_0, BIGTREE_GD_TFT43_V3_0, BIGTREE_GD_TFT50_V3_0, BIGTREE_GD_TFT70_V3_0, MKS_TFT28_V3_0, MKS_TFT28_V4_0, MKS_TFT28_NEW_GENIUS, MKS_TFT32_V1_3, MKS_TFT32_V1_4, MKS_TFT32_V1_4_NOBL, MKS_TFT32L_V3_0, MKS_TFT35_V1_0
 
 [common]
 default_src_filter = +<src/*> -<src/Libraries>
@@ -618,6 +619,23 @@ build_flags      = ${stm32f10x.build_flags}
   -DHARDWARE_SHORT="M32V14"
   -DMKS_TFT32_V1_4=
   -DMKS_TFT32_V1_4_NOBL=
+  -DMKS_TFT=
+
+#
+# MKS TFT32L V3.0
+#
+[env:MKS_TFT32L_V3_0]
+extends          = env:MKS_TFT32_V1_3
+build_flags      = ${stm32f10x.build_flags}
+  -DSTM32F10X_CL=
+  -DHSE_VALUE=25000000ul
+  -DVECT_TAB_FLASH=0x08007000
+  -DRAM_SIZE=64  ; Available RAM size in kbytes
+;  -DBINARY_FILENAME="MKSTFT28"                ; To override the default binary filename provided by -DHARDWARE
+;  -DBINARY_DIRECTORY="Copy to SD Card - MKS"  ; To override the default release directory
+  -DHARDWARE="MKS_TFT32L_V3_0"
+  -DHARDWARE_SHORT="M32LV30"
+  -DMKS_TFT32L_V3_0=
   -DMKS_TFT=
 
 #
