--- a/platformio.ini
+++ b/platformio.ini
@@ -44,8 +44,8 @@
 src_dir      = TFT
 boards_dir   = buildroot/boards
 ;Build only Target - BIGTREE_TFT35_V3_0
-;default_envs = BIGTREE_TFT35_V3_0
-default_envs = MKS_TFT28_V1_0_ARTILLERY
+default_envs = BIGTREE_TFT35_V3_0
+;default_envs = MKS_TFT28_V1_0_ARTILLERY
 
 ;Build all Targets
 ;default_envs = BIGTREE_TFT24_V1_1, BIGTREE_TFT28_V1_0, BIGTREE_TFT28_V3_0, BIGTREE_TFT35_V1_0, BIGTREE_TFT35_V1_1, BIGTREE_TFT35_V1_2, BIGTREE_TFT35_V2_0, BIGTREE_TFT35_V3_0, BIGTREE_TFT35_E3_V3_0, BIGTREE_TFT35_B1_V3_0, BIGTREE_TFT43_V3_0, BIGTREE_TFT50_V3_0, BIGTREE_TFT70_V3_0, BIGTREE_GD_TFT24_V1_1, BIGTREE_GD_TFT35_V2_0, BIGTREE_GD_TFT35_V3_0, BIGTREE_GD_TFT35_E3_V3_0, BIGTREE_GD_TFT35_B1_V3_0, BIGTREE_GD_TFT43_V3_0, BIGTREE_GD_TFT50_V3_0, BIGTREE_GD_TFT70_V3_0, MKS_TFT28_V3_0, MKS_TFT28_V4_0, MKS_TFT28_NEW_GENIUS, MKS_TFT32_V1_3, MKS_TFT32_V1_4, MKS_TFT32_V1_4_NOBL, MKS_TFT32L_V3_0, MKS_TFT35_V1_0
@@ -170,6 +170,12 @@ platform          = https://github.com/CommunityGD32Cores/platform-gd32.git
 platform_packages = framework-spl-gd32@https://github.com/bigtreetech/gd32-pio-spl-package
 framework         = spl
 upload_protocol   = cmsis-dap
+
+
+
+#
+# BIGTREE-TECH STM32 Series
+#
 
 #
 # BIGTREE TFT24 V1.1
@@ -376,7 +382,10 @@ build_flags      = ${stm32f4xx.build_flags} ${base64_png.build_flags}
 
 
 
-# GD32 Series
+#
+# BIGTREE-TECH GD32 Series
+#
+
 #
 # BIGTREE TFT24 V1.1
 #
@@ -508,7 +517,9 @@ build_flags      = ${stm32f4xx.build_flags} ${base64_png.build_flags}
 
 
 #
-# MKS Series, Maintained by open source contributors
+# MKS STM32 Series. Maintained by open source contributors
+#
+
 #
 # MKS TFT28 V3.0
 #
